stuf/src/p4/tests/t021.err
Semantic error on line 3: A string expression is not a legal array index. The array is 'billboards'.
Semantic error on line 4: A circle expression is not a legal array index. The array is 'billboards'.
