stuf/src/p4/tests/t021.gpl
circle wheel;
textbox billboards[5];
double font=billboards["bellicose"].size;
double faint=billboards[wheel].size;
